<resources>
    <string name="app_name">HEALTH BUDDY</string>
    <string name="CHOLESTEROL">CHOLESTEROL</string>
    <string name="TRLGLYCERIDE">TRLGLYCERIDE</string>
    <string name="HDL_CHOLESTEROL">HDL CHOLESTEROL</string>
    <string name="LDL_CHOLESTEROL">LDL CHOLESTEROL</string>
    <string name="VLDL_CHOLESGEROL">VLDL CHOLESGEROL</string>
    <string name="CHECK">CHECK</string>
    <string name="CHOL_HDL_RATIO">CHOL/HDL RATIO</string>
    <string name="LDL_HDL_RATIO">LDL/HDL RATIO</string>
    <string name="NON_HDL_CHOLESTEROL">NON-HDL CHOLESTEROL</string>
    <string name="title_activity_hba1c">hba1c</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="BILIRUBIN_TOTAL">BILIRUBIN_TOTAL (mg/gl)</string>
    <string name="BILIRUBIN_UNCONJUGATED">BILIRUBIN_UNCONJUGATED\t(mg/dl)</string>
    <string name="BILIRUBIN_CONJUGATED">BILIRUBIN_CONJUGATED (mg/dl)</string>
    <string name="SGOT">SGOT (U/L)</string>
    <string name="SGPT">SGPT (U/L)</string>
    <string name="ALKALINE_PHOSPHATASE">ALKALINE_PHOSPHATASE (U/L)</string>
    <string name="TOTAL_PROTEIN">TOTAL_PROTEIN (gm/dl)</string>
    <string name="ALBUMIN_SERUM">ALBUMIN,SERUM (gm/dl)</string>
    <string name="GLOBULIN">GLOBULIN (gm/dl)</string>
    <string name="A_G">A:G (ratio)</string>


    <string name="FASTING_PLSAMA_GLUCOSE">FASTING PLSAMA GLUCOSE (mg/dl)</string>
    <string name="select">Select Item</string>


</resources>