<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/BITL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            >

            <EditText
                android:id="@+id/BIT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/BILIRUBIN_TOTAL"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/BIUL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/BIU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/BILIRUBIN_UNCONJUGATED"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>







        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/BICL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/BIC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/BILIRUBIN_CONJUGATED"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>









        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SGOTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/SGOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/SGOT"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>











        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SGPTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/SGPT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/SGPT"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>










        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/APL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/AP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/ALKALINE_PHOSPHATASE"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>









        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TPL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/TP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/TOTAL_PROTEIN"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>












        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ASL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/AS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/ALBUMIN_SERUM"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>













        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/GL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/G"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/GLOBULIN"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>













        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AGL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00090B8A"
            app:endIconMode="clear_text"
            app:helperText="Mandatory"
            app:helperTextTextColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/AG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4D5868CC"
                android:hint="@string/A_G"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColorHighlight="#5E6691">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>














        <com.google.android.material.button.MaterialButton
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:padding="12dp"
            android:text="Check"
            app:cornerRadius="110dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:iconGravity="textStart">

        </com.google.android.material.button.MaterialButton>






    </LinearLayout>

</ScrollView>

